<resources>
    <string name="app_name">myWiFi</string>
    <string name="AlertDialog_Builder_title">Available languages</string>
    <string name="btn_language">Choose a language</string>
    <string name="secondItem">Second</string>
    <string name="firstItem">First</string>
    <string name="btn_On">Turn On WiFi</string>
    <string name="btn_Off">Turn Off WiFi</string>
    <string name="btn_discover">Discover Network</string>
    <string name="edittext_newNick">Type new nick</string>
    <string name="btn_changeNick">Change nick</string>
    <string name="ToastChangedNick">Success in changing</string>
    <string name="textWelcome">Welcome </string>
    <string name="textViewStart">WiFi Chat! </string>
    <string name="textViewStatusFirst">Here will be the status </string>
    <string name="btn_send">Send</string>
    <string name="hintMessage">Write here...</string>
</resources>
