<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/WelcomeMessage"
        android:text="15sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_OnOff"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_Discover"
        android:text="@string/btn_discover"/>
    
    <ListView
        android:id="@+id/wifiList"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>

    <Button
        android:id="@+id/btn_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_language" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="3"
        >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/edittext_newNick"
            android:id="@+id/text_newNick"
            />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_changeNick"
            android:id="@+id/btn_changeNick"
            />
        
    </LinearLayout>
</LinearLayout>