<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/textViewStatusFirst"
        android:textAlignment="center"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/upperLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btServer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Server..." />

            <Button
                android:id="@+id/btClient"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Client..."/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ipAndPortLayout"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Write server's IP address"
                android:visibility="gone"
                android:id="@+id/etIpAddress"
                android:inputType="numberDecimal"
                android:digits="0123456789."/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Write server's port number"
                android:visibility="gone"
                android:id="@+id/etPortNumber"
                android:inputType="number"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Connect!"
                android:id="@+id/clientConnect"
                android:visibility="gone"/>

        </LinearLayout>


        <TextView
            android:id="@+id/TojestmojeID"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="Tutaj będzie adres IP servera"
            android:textAlignment="center"
            android:visibility="gone"
            android:gravity="center"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lowerLayout"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resetButton"
            android:text="Reset"
            />

        <ListView
            android:id="@+id/mojawiadomosc"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom">

            <EditText
                android:id="@+id/etMessage"
                android:layout_width="228dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:hint="@string/hintMessage"
                android:inputType="textPersonName"
                android:layout_weight="3"/>

            <Button
                android:id="@+id/btnSend"
                android:layout_width="108dp"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:text="@string/btn_send"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>